# hdl-encrypt

./: .coverage  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  publish.yml
src/encrypt/: __init__.py  cli.py
src/hdl_encrypt/: crypto.py  formatter.py  parser.py
tests/: test_cli.py  test_crypto.py  test_formatter.py  test_integration.py  test_main.py  test_parser.py
