[project]
name = "encrypt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rasmus Olsen", email = "22944947+RasmusGOlsen@users.noreply.github.com" }
]
requires-python = ">=3.10"
dependencies = [
    "cryptography>=44.0.0",
]

[project.scripts]
encrypt = "encrypt:main"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "A"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
ignore_missing_imports = true

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.8",
    "tox>=4.50.3",
    "tox-uv>=1.33.4",
]
